--- a/language/en-GB/en-GB.plg_system_shortcode.ini
+++ b/language/en-GB/en-GB.plg_system_shortcode.ini
@@ -1,6 +1,6 @@
 ;Plugin info
-PLG_SHORTCODE_XML_NAME="System - Shortcode"
-PLG_SHORTCODE_XML_DESCRIPTION="Shortcode - Simple Template (No design=No CSS+No JS integration / 100% Developper = bbcodes + Custom). Create own tpl with our shortcode=bbcodes. Is it possible! <br />	Exemple for links BBcode: [url href='http' title='name content' rel='follow']Name content[/url] <br />	Exemple for link html: <.a href="_QQ_"http"_QQ_" title="_QQ_"name content"_QQ_" rel="_QQ_"follow"_QQ_".>name content<.a.> (take out dot between <>)<br />	<hr />		Developper by Alexon Balangue for only joomla 3.x<br />	<h3>Version now: 4.2.0 - For developper &amp; designer (novice/Expert)</h3>	"
+PLG_SHORTCODE_XML_NAME="Shortcode"
+PLG_SHORTCODE_XML_DESCRIPTION="Shortcode - Simple Template (No design=No CSS+No JS integration / 100% Developper = bbcodes + Custom). Create own tpl with our shortcode=bbcodes. Is it possible! <br />	Exemple for links BBcode: [url href='http' title='name content' rel='follow']Name content[/url] <br />	Exemple for link html: <.a href="_QQ_"http"_QQ_" title="_QQ_"name content"_QQ_" rel="_QQ_"follow"_QQ_".>name content<.a.> (take out dot between <>)<br />	<hr />		Developper by Alexon Balangue for only joomla 4<br />	<h3>Version now: 5 - For developper &amp; designer (novice/Expert)</h3>	"
 
 ;Config
 PLG_SHORTCODE_OPTION_VALUE_HIDE="Hide"
