Compatible  again to J3.8.8
full tested

--- a/language/fr-FR/fr-FR.plg_system_shortcode.ini
+++ b/language/fr-FR/fr-FR.plg_system_shortcode.ini
@@ -1,11 +1,11 @@
 ;Plugin info
 PLG_SHORTCODE_XML_NAME="System - Shortcode"
-PLG_SHORTCODE_XML_DESCRIPTION="Shortcode - Simple Thèmes (pas de design=non au CSS+Non au JS integréer / 100% pour Développeur = bbcodes + personnaliser). Créer votre propre tpl avec notre shortcode=bbcodes. C'est possible! <br />	Exemple pour un lien BBcode: [url href='http' title='name content' rel='follow']Name content[/url] <br />	Exemple pour un lien en html: <.a href="_QQ_"http"_QQ_" title="_QQ_"name content"_QQ_" rel="_QQ_"follow"_QQ_".>name content<.a.> (enlever le point entre <>)<br />	<hr />		Developper by Alexon Balangue for only joomla 3.x<br />	<h3>Version now: 4.2.0 - For developper &amp; designer (novice/Expert)</h3>	"
+PLG_SHORTCODE_XML_DESCRIPTION="Shortcode - Simple Thèmes (pas de design=non au CSS+Non au JS integréer / 100% pour Développeur = bbcodes + personnaliser). Créer votre propre tpl avec notre shortcode=bbcodes. C'est possible! <br />	Exemple pour un lien BBcode: [url href='http' title='name content' rel='follow']Name content[/url] <br />	Exemple pour un lien en html: <.a href="_QQ_"http"_QQ_" title="_QQ_"name content"_QQ_" rel="_QQ_"follow"_QQ_".>name content<.a.> (enlever le point entre <>)<br />	<hr />		Developper by Alexon Balangue for only joomla 3.x<br />	<h3>Version now: 4.2.1 - For developper &amp; designer (novice/Expert)</h3>	"
 
 ;Config
 PLG_SHORTCODE_OPTION_VALUE_HIDE="cacher"
 PLG_SHORTCODE_OPTION_VALUE_SHOW="afficher"
-PLG_SHORTCODE_FULL_DOCS="Documentation complète télécharger <a href="_QQ_"http://adf.ly/4162904/plugin-sys-shortcode-for-j36"_QQ_" rel="_QQ_"nofollow"_QQ_" target="_QQ_"_blank"_QQ_">WWW.AlexonBalangue</a> gratuit ou VIP."
+PLG_SHORTCODE_FULL_DOCS="Documentation complète <a href="_QQ_"https://www.alexonbalangue.me/projet/shortcodes.html"_QQ_" rel="_QQ_"nofollow"_QQ_" target="_QQ_"_blank"_QQ_">WWW.AlexonBalangue</a>"
 PLG_SHORTCODE_INFO="Transformer tous vos tag HTML en Shortcode=BBcode"
 
 ;Views
